--- a/Form/style.css
+++ b/Form/style.css
@@ -12,35 +12,7 @@ body {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
-.popup {
-	 width:100%;
-    min-height:100%;
-    background-color: rgba(0,0,0,0.5);
-    overflow:hidden;
-    position:fixed;
-    top:0px;
-    display: none;	
-}
-.popup .form {
-	width: 500px;
-	max-height: auto;
-	border: 1px solid gray;
-	border-radius: 6px;
-	margin: 0 auto;
-	padding: 20px;
-	background-color: #fff;
-    box-shadow: 0px 0px 10px #000;
-    position: fixed;
-	top: 20px;
-	left: 420px;
-}
-.hide {
-	position: absolute;
-	right: 20px;
-	text-decoration: none;
-	color: blue;
-	font-weight: bold;
-}
+
 .title_form{
 	text-align: center;
 	color: #88BCEF;
@@ -108,4 +80,35 @@ strong {
 	background-color: #DDDDDD;
 	color: #6F7B91;
 	font-size: 16px;
+}
+/*----Всплывающее окно----*/
+.popup {
+	 width:100%;
+    min-height:100%;
+    background-color: rgba(0,0,0,0.5);
+    overflow:hidden;
+    position:fixed;
+    top: 0;
+    display: none;	
+
+}
+.popup .form {
+	width: 500px;
+	max-height: auto;
+	border: 1px solid gray;
+	border-radius: 6px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #fff;
+    box-shadow: 0px 0px 10px #000;
+    position: fixed;
+	top: 20px;
+	left: 420px;
+}
+.hide {
+	position: absolute;
+	right: 20px;
+	text-decoration: none;
+	color: blue;
+	font-weight: bold;
 }
