--- a/style.css
+++ b/style.css
@@ -7,27 +7,19 @@
 	src: url(font/Apercu/apercu_light-webfont.ttf);
 }
 body {
+	width: 1350px;
 	font-family: sans-serif;
-	 margin: auto;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+	 margin: 0 auto;
+  position: relative;
 }
 
 .header-bg{
-	height: 100vh;
+	height: 660px;
 	width: auto;
 	background: url("image/image_header.jpg");
 	background-size: cover;
 	color: #fff;
 	padding: 2vh;
-}
-header {
-	height: 70px;
-	margin: 5vh 5vh;
-	padding: 0vh 5vh;
 }
 
 .logo, .button_nav {
@@ -42,6 +34,7 @@ header {
 }
 header nav ul {
 	float: left;
+	margin: 10px;
 }
 li {
 	list-style: none;
@@ -50,16 +43,28 @@ li {
 	font-family: Apercu;
 }
 header nav {
-	float: right;
+	float: left;
+}
+.logotype {
+	width: 200px;
+	margin: auto;
+	position: absolute;
+	left: 60px;
+	top: 30px;
 }
 .nav {
-	margin: 15px;
+	margin: auto;
+	position: absolute;
+	right: 60px;
+	top: 30px;
+	float: left;
 }
 .button_nav {
 	border: 0.99px solid #fff;
 	border-radius: 3px;
 	background: none;
 	padding: 10px 20px;
+	margin: 10px;
 	text-decoration: none;
 	color: #fff;
 	font-family: Apercu;
@@ -93,6 +98,7 @@ h1 {
 	padding: 26.5px;
 }
 .input_mail {
+	max-width: 460px;
 	position: absolute;
     top: 250px;
     left: 480px;
@@ -100,18 +106,22 @@ h1 {
     display: inline-block;
 }
 .header_button {
+	min-width: 100px;
+	height: 53px;
 	border-radius: 0px 3px 3px 0px;
     background: #6782c2;
-    padding: 17.5px 15px;
+    padding: 17px 15px;
 	float: right;
     text-align: center;
     text-decoration: none;
 	color: #fff;
 }
 .footer_button {
+	min-width: 100px;
+	height: 53px;
 	border-radius: 0px 3px 3px 0px;
     background: #3ecacb;
-    padding: 17.5px 15px;
+    padding: 17px 15px;
 	float: right;
     text-align: center;
     text-decoration: none;
@@ -197,7 +207,7 @@ p {
 	padding: 80px 20px 60px 60px;
 }
 .footer_block {
-	height: 40vh;
+	height: 250px;
 	width: auto;
 	background: url("image/image_footer.jpg");
 	background-size: cover;
